Refactor components and routing structure for improved organization and functionality
- Updated imports in SM01695, SM01696, and SM01741 components to use the new DataResponse type from 4d.tsx.
- Modified default values in SM01695 for consistency in string formatting.
- Removed redundant allergy definitions in SM01696.
- Enhanced the Form and Page components to accept additional className props for better styling flexibility.
- Adjusted CSS styles in index.css for print layout and visibility handling.
- Introduced utility functions in utils.ts for authentication management.
- Reworked main.tsx to utilize TanStack Router for routing and data fetching.
- Created new 4d.tsx file to handle form data retrieval and initialization.
- Added new SM01742 component for urological endoscopy nursing care.
- Implemented Textarea and TimePicker components for better user input handling.
- Generated route tree and corresponding route files for authentication and main application structure.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.14",
     "@tailwindcss/vite": "^4.1.7",
+    "@tanstack/react-router": "^1.120.20",
+    "@tanstack/react-router-devtools": "^1.120.20",
     "clsx": "^2.1.1",
     "react": "^19.1.0",
     "react-barcode": "^1.6.1",
@@ -21,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tanstack/router-plugin": "^1.120.20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
